# file_transfer_server

./: CMakeLists.txt
client/: main  main.cpp  工作表.xlsx
include/: Logger.h  Reply.h  Request.h  RequestHandler.h  Resquest.h  Server.h  Session.h
src/: Logger.cpp  RequestHandler.cpp  Server.cpp  Session.cpp  main.cpp
testfile/: assignment.doc
